<resources>
    <string name="app_name">DIGI Yoga</string>


    <string name="welcome_to_">Welcome !\nto our DIGI YOGA</string>

    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="create_account">Create your new account</string>
    <string name="register">Register</string>
    <string name="splash_screen_quote">
        Yoga is fountain of youth,\n you\'re only as young as your spine is flexible"
    </string>


    //facebook integration data

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="displayName">Display Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="welcome_text">Top Choices For You</string>
    <string name="welcome_text_description">Yoga is a great practice for both the body and the mind, it offers peace and mindfulness to its lovers and helps them get through daily stress. Therefore, we have compiled for you some of the most amazing yoga quotes to keep you motivated and excited to get on the mat.</string>
    <string name="meetingID">Meeting Id</string>


</resources>