<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="30dp"
                android:shadowColor="#000000"
                android:text="@string/create_account"
                android:textColor="#221E1E"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:shadowColor="#000000"
                android:text="Already have an Account?LOG In"
                android:textColor="#777575"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_button" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="top"
                android:lineSpacingExtra="4sp"
                android:text="@string/Register"
                android:textAppearance="@style/welcome_to_"
                android:textColor="#333232"
                android:textSize="40dp"
                android:textStyle="bold"
                android:translationY="-1.98sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.044" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/input_field_background"
                android:elevation="20dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#fff"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_register_full_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="12dp"
                        android:clickable="false"
                        android:hint="@string/full_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_register_full_name"
                            style="@style/lrf_input_edit_text_style"
                            android:inputType="textAutoComplete"
                            app:drawableLeftCompat="@drawable/profile_icon"
                            app:drawableStartCompat="@drawable/profile_icon" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_register_mobile"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="12dp"
                        android:clickable="false"
                        android:hint="@string/mobile_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_register_mobile"
                            style="@style/lrf_input_edit_text_style"
                            android:inputType="number"
                            android:maxLength="@integer/max_phone_no"
                            app:drawableLeftCompat="@drawable/ic_baseline_phone_24"
                            app:drawableStartCompat="@drawable/ic_baseline_phone_24" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_register_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="12dp"
                        android:clickable="false"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_register_email"
                            style="@style/lrf_input_edit_text_style"
                            android:inputType="textWebEmailAddress"
                            app:drawableLeftCompat="@drawable/email_icon"
                            app:drawableStartCompat="@drawable/email_icon" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_login_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_login_password"
                            style="@style/lrf_input_edit_text_style"
                            android:inputType="textPassword"
                            app:drawableLeftCompat="@drawable/ic_baseline_lock_24"
                            app:drawableStartCompat="@drawable/ic_baseline_lock_24" />

                        <!--                <TextView-->
                        <!--                    android:layout_width="match_parent"-->
                        <!--                    android:layout_height="wrap_content"-->
                        <!--                    android:layout_margin="10dp"-->
                        <!--                    android:layout_weight="1"-->
                        <!--                    android:textAlignment="viewEnd"-->
                        <!--                    android:textColor="#515151"-->
                        <!--                    android:textStyle="bold" />-->

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_login_confirm_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="10sp"
                        android:hint="@string/confirm_password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_login_confirm_password"
                            style="@style/lrf_input_edit_text_style"
                            android:inputType="textPassword"
                            app:drawableLeftCompat="@drawable/ic_baseline_lock_24"
                            app:drawableStartCompat="@drawable/ic_baseline_lock_24" />

                        <!--                <TextView-->
                        <!--                    android:layout_width="match_parent"-->
                        <!--                    android:layout_height="wrap_content"-->
                        <!--                    android:layout_margin="10dp"-->
                        <!--                    android:layout_weight="1"-->
                        <!--                    android:textAlignment="viewEnd"-->
                        <!--                    android:textColor="#515151"-->
                        <!--                    android:textStyle="bold" />-->

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="54dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="54dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/round_button_background"
                android:backgroundTint="#fff"
                android:elevation="4dp"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>