<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_page"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_"
        android:textStyle="bold"
        android:translationY="-1.98sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="456dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_1"
        android:backgroundTint="#81f0ae"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:shadowColor="#000000"
        android:text="Please LOG in to continue"
        android:textColor="#221E1E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/input_field_background"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#fff"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:clickable="false"
                android:hint="@string/mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_login_username"
                    style="@style/lrf_input_edit_text_style"
                    android:drawableTint="#403D3D"
                    android:inputType="number"
                    android:maxLength="@integer/max_phone_no"
                    app:drawableLeftCompat="@drawable/ic_baseline_phone_24"
                    app:drawableStartCompat="@drawable/ic_baseline_phone_24" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_login_password"
                    style="@style/lrf_input_edit_text_style"
                    android:drawableTint="#403D3D"
                    android:inputType="textPassword"
                    app:drawableLeftCompat="@drawable/ic_baseline_lock_24"
                    app:drawableStartCompat="@drawable/ic_baseline_lock_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="Forget Password?"
                    android:textAlignment="viewEnd"
                    android:textColor="#515151"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/rectangle_4"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/round_button_background"
                android:backgroundTint="#000000"
                android:elevation="4dp"
                android:text="Login" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="or"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orText">


        <ImageView
            android:id="@+id/google_logo"
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            app:srcCompat="@drawable/google_logo" />

        <ImageView
            android:id="@+id/twitter_logo"
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            app:srcCompat="@drawable/twitter_logo" />

        <!--                <ImageView-->
        <!--                    android:id="@+id/imageView5"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_marginStart="@dimen/_20sdp"-->
        <!--                    android:layout_marginEnd="@dimen/_20sdp"-->
        <!--                    android:layout_weight="1"-->
        <!--                    app:srcCompat="@drawable/google_logo" />-->

    </LinearLayout>

    <!--        <View-->
    <!--            android:id="@+id/line_1"-->
    <!--            android:layout_width="329dp"-->
    <!--            android:layout_height="1dp"-->
    <!--            android:layout_alignParentLeft="true"-->
    <!--            android:layout_alignParentTop="true"-->
    <!--            android:layout_marginBottom="112dp"-->
    <!--            android:background="@drawable/line"-->
    <!--            app:layout_constraintBottom_toBottomOf="@+id/view"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>